--- a/IDE/INTIME-RTOS/include.am
+++ b/IDE/INTIME-RTOS/include.am
@@ -10,4 +10,8 @@ EXTRA_DIST += \
     IDE/INTIME-RTOS/wolfExamples.c \
     IDE/INTIME-RTOS/wolfExamples.h \
     IDE/INTIME-RTOS/wolfExamples.vcxproj \
-    IDE/INTIME-RTOS/wolfExamples.sln
+    IDE/INTIME-RTOS/wolfExamples.sln \
+    IDE/INTIME-RTOS/wolfssl-lib.sln \
+    IDE/INTIME-RTOS/wolfssl-lib.vcxproj \
+    IDE/INTIME-RTOS/wolfssl-lib.vcxproj.filters \
+    IDE/INTIME-RTOS/makefile
