--- a/wrapper/CSharp/wolfSSL-TLS-PSK-Server/App.config
+++ b/wrapper/CSharp/wolfSSL-TLS-PSK-Server/App.config
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+        <supportedRuntime version="v2.0.50727"/>
     </startup>
+    <appSettings>
+        <add key="WOLFSSL_DLL_PATH" value="C:/Windows/System32"/>
+    </appSettings>
+    <appSettings>
+        <add key="WOLFSSL_CERTS_PATH" value="C:/workspace/wolfssl/certs"/>
+    </appSettings>
 </configuration>
