--- a/scripts/include.am
+++ b/scripts/include.am
@@ -110,7 +110,8 @@ EXTRA_DIST +=  scripts/sniffer-static-rsa.pcap \
                scripts/memtest.sh \
                scripts/makedistsmall.sh \
                scripts/openssl_srtp.test \
-               scripts/aria-cmake-build-test.sh
+               scripts/aria-cmake-build-test.sh \
+               scripts/asn1_oid_sum.pl
 
 
 # leave openssl.test as extra until non bash works
