--- a/wolfssl/wolfcrypt/include.am
+++ b/wolfssl/wolfcrypt/include.am
@@ -85,7 +85,8 @@ nobase_include_HEADERS+= \
                          wolfssl/wolfcrypt/ext_lms.h \
                          wolfssl/wolfcrypt/xmss.h \
                          wolfssl/wolfcrypt/wc_xmss.h \
-                         wolfssl/wolfcrypt/ext_xmss.h
+                         wolfssl/wolfcrypt/ext_xmss.h \
+                         wolfssl/wolfcrypt/oid_sum.h
 
 noinst_HEADERS+= \
                          wolfssl/wolfcrypt/port/aria/aria-crypt.h \
