--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -18,23 +18,18 @@ jobs:
     defaults:
       run:
         shell: msys2 {0}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - { sys: ucrt64,  compiler: mingw-w64-ucrt-x86_64-gcc }
-          - { sys: mingw64, compiler: mingw-w64-x86_64-gcc }
-          - { sys: msys, compiler: gcc }
     steps:
       - uses: actions/checkout@v3
       - uses: msys2/setup-msys2@v2
         with:
-          msystem: ${{ matrix.sys }}
+          msystem: msys
           update: true
-          install: git ${{matrix.compiler}} autotools base-devel autoconf netcat
+          install: git gcc autotools base-devel autoconf netcat
       - name: configure wolfSSL
         run: ./autogen.sh && ./configure CFLAGS="-DUSE_CERT_BUFFERS_2048 -DUSE_CERT_BUFFERS_256 -DNO_WRITE_TEMP_FILES"
       - name: build wolfSSL
+        run: make
+      - name: run tests
         run: make check
       - name: Display log
         if: always()
