--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -42,6 +42,7 @@ jobs:
             --enable-psk --enable-aesccm --enable-nullcipher CPPFLAGS=-DWOLFSSL_STATIC_RSA',
           '--enable-ascon --enable-experimental',
           '--enable-ascon CPPFLAGS=-DWOLFSSL_ASCON_UNROLL --enable-experimental',
+          '--enable-all CPPFLAGS=''-DNO_AES_192 -DNO_AES_256'' ',
         ]
     name: make check
     if: github.repository_owner == 'wolfssl'
