--- a/.github/workflows/libssh2.yml
+++ b/.github/workflows/libssh2.yml
@@ -60,14 +60,27 @@ jobs:
       - name: untar build-dir
         run: tar -xf build-dir.tgz
 
-      - name: Build and test libssh2
-        uses: wolfSSL/actions-build-autotools-project@v1
+      - name: Clone libssh2
+        uses: actions/checkout@v4
         with:
           repository: libssh2/libssh2
           ref: libssh2-${{ matrix.ref }}
           path: libssh2
-          configure: --with-crypto=wolfssl --with-libwolfssl-prefix=$GITHUB_WORKSPACE/build-dir
-          check: true
+
+      - name: Build libssh2
+        working-directory: libssh2
+        run: |
+          autoreconf -fi
+          ./configure --with-crypto=wolfssl --with-libwolfssl-prefix=$GITHUB_WORKSPACE/build-dir
+
+      - name: Update libssh2 test to use a stable version of debian
+        working-directory: libssh2
+        run: |
+            sed -i 's/testing-slim/stable-slim/' tests/openssh_server/Dockerfile
+
+      - name: Run libssh2 tests
+        working-directory: libssh2
+        run: make check
 
       - name: Confirm libssh2 built with wolfSSL
         run: ldd libssh2/src/.libs/libssh2.so | grep wolfssl
