--- a/.github/workflows/multi-arch.yml
+++ b/.github/workflows/multi-arch.yml
@@ -30,6 +30,7 @@ jobs:
           - HOST: riscv64-linux-gnu
             CC: riscv64-linux-gnu-gcc
             ARCH: riscv64
+            EXTRA_OPTS: --enable-riscv-asm
           # Config to ensure CPUs without Thumb instructions compiles
           - HOST: arm-linux-gnueabi
             CC: arm-linux-gnueabi-gcc
@@ -51,7 +52,7 @@ jobs:
             CC: ${{ matrix.CC }}
             CFLAGS: ${{ matrix.CFLAGS }}
             QEMU_LD_PREFIX: /usr/${{ matrix.HOST }}
-        run: ./autogen.sh && ./configure --host=${{ matrix.HOST }} --enable-all --disable-examples ${{ matrix.EXTRA_OPTS }} && make
+        run: ./autogen.sh && ./configure --host=${{ matrix.HOST }} --enable-all --disable-examples CPPFLAGS="-pedantic -Wdeclaration-after-statement -DTEST_LIBWOLFSSL_SOURCES_INCLUSION_SEQUENCE -DWOLFCRYPT_TEST_LINT" ${{ matrix.EXTRA_OPTS }} && make
       - name: Print errors
         if: ${{ failure() }}
         run: |
