--- a/.github/workflows/os-check.yml
+++ b/.github/workflows/os-check.yml
@@ -45,6 +45,7 @@ jobs:
           '--enable-ascon --enable-experimental',
           '--enable-ascon CPPFLAGS=-DWOLFSSL_ASCON_UNROLL --enable-experimental',
           '--enable-all CPPFLAGS=''-DNO_AES_192 -DNO_AES_256'' ',
+          '--enable-sniffer --enable-curve25519 --enable-curve448 --enable-enckeys CFLAGS=-DWOLFSSL_DH_EXTRA',
         ]
     name: make check
     if: github.repository_owner == 'wolfssl'
