Refactor TROPIC01 integration: update README, enhance pairing key handling, and improve error messages

--- a/configure.ac
+++ b/configure.ac
@@ -2853,24 +2853,24 @@ trylibtropicdir=""
 AC_ARG_WITH([tropic01],
     [AS_HELP_STRING([--with-tropic01=PATH],[PATH to  install (default /usr/)])],
     [
-        AC_MSG_CHECKING([for tropic01])
+        AC_MSG_CHECKING([for libtropic])
         if test "x$withval" != "xno" ; then
             trylibtropicdir=$withval
-			AC_MSG_NOTICE([Use provided PATH])
+			# AC_MSG_NOTICE([Use provided PATH])
         fi
         if test "x$withval" = "xyes" ; then
 		    trylibtropicdir="libtropic"
-			AC_MSG_NOTICE([Use default PATH])
+			# AC_MSG_NOTICE([Use default PATH])
         fi
         if test -e $trylibtropicdir/build/libtropic.a
         then
             LIB_STATIC_ADD="$LIB_STATIC_ADD $trylibtropicdir/build/libtropic.a"
 			LIB_STATIC_ADD="$LIB_STATIC_ADD $trylibtropicdir/build/trezor_crypto/libtrezor_crypto.a"
             AM_CFLAGS="$AM_CFLAGS -I$trylibtropicdir/include"
-			AC_MSG_NOTICE([TropicSquare library is available])
+			# AC_MSG_NOTICE([TropicSquare library is available])
         else
             ENABLED_TROPIC01="no"
-			AC_MSG_ERROR([Could not find TropicSquare library])
+			AC_MSG_ERROR([Could not find libtropic - TropicSquare library])
         fi
 		enable_shared=no
         enable_static=yes
