Changes for the PR https://github.com/wolfSSL/wolfssl/pull/8812

--- a/wolfcrypt/src/include.am
+++ b/wolfcrypt/src/include.am
@@ -106,6 +106,7 @@ EXTRA_DIST += wolfcrypt/src/port/ti/ti-aes.c \
               wolfcrypt/src/port/st/STM32MP13.md \
 			  wolfcrypt/src/port/st/STM32MP25.md \
               wolfcrypt/src/port/tropicsquare/tropic01.c \
+              wolfcrypt/src/port/tropicsquare/README.md \
               wolfcrypt/src/port/af_alg/afalg_aes.c \
               wolfcrypt/src/port/af_alg/afalg_hash.c \
               wolfcrypt/src/port/kcapi/kcapi_aes.c \
